# CPPMatrixLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gauss_elim.hpp  main.cpp  matrix_utility.hpp  soc_readme.md  strassen_improvement.md  strasssen.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/matrix/: CMakeLists.txt  test1.cpp
tests/polynomial/: CMakeLists.txt  test1.cpp
